# jellymal-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entry-point.sh
src/: jellyfin.rs  main.rs  mal.rs  mapping.rs  oauth.rs
tests/fixtures/: anidb-to-mal.json  tvdb-to-anidb.xml
