[package]
name = "jellymal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
oauth2 = { version = "4.4.2", features = ["pkce-plain"] }
reqwest = {version = "0.11.23", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
url = "2.5.0"
serde-xml-rs = "0.6.0"
chrono = "0.4.34"
log = "0.4.20"
env_logger = { version = "^0.11.2", default-features = false }
